unpackaged/main/default/objects/PagesApi__Community_Group__c/PagesApi__Community_Group__c.object-meta.xml
<CustomObject>
    <description>A group of members which could contain either groups or contacts or accounts.</description>
    <label>Community Group</label>
    <nameField>
        <label>Community Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>