unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Banner__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Banner__c</fullName>
    <defaultValue>&quot;https://s3.amazonaws.com/package-assets/integration/emerald/img/cover-bgs/cover-1.jpg&quot;</defaultValue>
    <description>Banner displayed in the group</description>
    <inlineHelpText>Banner displayed in the group</inlineHelpText>
    <label>Banner</label>
    <type>Url</type>
</CustomField>