unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Chatter_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Chatter_Group_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>**System Calculated** Collaboration group ID that the community group is linked with.</description>
    <externalId>true</externalId>
    <inlineHelpText>**System Calculated** Collaboration group ID that the community group is linked with.</inlineHelpText>
    <label>Chatter Group ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>