unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Community_Network_ID__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Community_Network_ID__c</fullName>
    <description>** System Calculated ** This field shows the ID for the related community.</description>
    <formula>PagesApi__Site__r.PagesApi__Community_Network_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** This field shows the ID for the related community.</inlineHelpText>
    <label>Community Network ID</label>
    <type>Text</type>
</CustomField>