unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Description__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Description__c</fullName>
    <description>Description of the group that should appear in the dashboard of the group.</description>
    <inlineHelpText>Description of the group that should appear in the dashboard of the group.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>