unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Disable_Join__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Disable_Join__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable joining the community group.</description>
    <inlineHelpText>Disable joining the community group.</inlineHelpText>
    <label>Disable Join</label>
    <type>Checkbox</type>
</CustomField>