unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Email__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Email__c</fullName>
    <description>The Group&#39;s email address.</description>
    <inlineHelpText>The Group&#39;s email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>