unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Group will only be made visible when the Contact meets the criteria set in the &quot;Access Permissions&quot; related list. Unchecked by default.</description>
    <inlineHelpText>When checked, the Group will only be made visible when the Contact meets the criteria set in the &quot;Access Permissions&quot; related list. Unchecked by default.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>