unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Enable_Community_Feed__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Enable_Community_Feed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables chatter features in the community. Requires members to be enabled.</description>
    <inlineHelpText>Enables chatter features in the community. Requires members to be enabled.</inlineHelpText>
    <label>Enable Community Feed</label>
    <type>Checkbox</type>
</CustomField>