unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Enable_Events__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Enable_Events__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables event only features in the community.</description>
    <inlineHelpText>Enables event only features in the community.</inlineHelpText>
    <label>Enable Events</label>
    <type>Checkbox</type>
</CustomField>