unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Enable_Members__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Enable_Members__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables Member features in the community.</description>
    <inlineHelpText>Enables Member features in the community.</inlineHelpText>
    <label>Enable Members</label>
    <type>Checkbox</type>
</CustomField>