unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Group_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Image_URL__c</fullName>
    <defaultValue>&quot;https://s3.amazonaws.com/package-assets/integration/emerald/img/placeholders/item.png&quot;</defaultValue>
    <description>URL for the group image that should appear in the dashboard of the group.</description>
    <inlineHelpText>URL for the group image that should appear in the dashboard of the group.</inlineHelpText>
    <label>Group Image URL</label>
    <type>Url</type>
</CustomField>