unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Group_Member_Edit_Field_Sets_CSV__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Member_Edit_Field_Sets_CSV__c</fullName>
    <defaultValue>&quot;Community_Group_Member_Edit&quot;</defaultValue>
    <description>This field references field sets that define the attributes to be updated by the group member when editing their group member profile.</description>
    <inlineHelpText>This field references field sets that define the attributes to be updated by the group member when editing their group member profile.</inlineHelpText>
    <label>Group Member Edit Field Sets(CSV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>