unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Group_Member_View_Field_Sets_CSV__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Member_View_Field_Sets_CSV__c</fullName>
    <defaultValue>&quot;Community_Group_Member_View&quot;</defaultValue>
    <description>This field references field sets that define the attributes to be seen on the group member modal.</description>
    <inlineHelpText>This field references field sets that define the attributes to be seen on the group member modal.</inlineHelpText>
    <label>Group Member View Field Sets(CSV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>