unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Group_Owner__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the group. Defaults to the user creating the group, if not populated.</description>
    <inlineHelpText>Owner of the group. Defaults to the user creating the group, if not populated.</inlineHelpText>
    <label>Group Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Community_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>