unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Group_Roster_Label__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Roster_Label__c</fullName>
    <defaultValue>&quot;Group Roster&quot;</defaultValue>
    <description>Button label displayed on the group detail page.</description>
    <inlineHelpText>Button label displayed on the group detail page.</inlineHelpText>
    <label>Group Roster Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>