unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Group_Roster_Link__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Roster_Link__c</fullName>
    <description>Page where the user should be redirected when they click the roster link. Defaults to the group roster page.</description>
    <inlineHelpText>Page where the user should be redirected when they click the roster link. Defaults to the group roster page.</inlineHelpText>
    <label>Group Roster Link</label>
    <type>Url</type>
</CustomField>