unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Is_Contact_Member_Entity__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Contact_Member_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Selected if Member Entity Type is &quot;Contact.&quot;</description>
    <inlineHelpText>**System Calculated** Selected if Member Entity Type is &quot;Contact.&quot;</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>