unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Is_Private__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the group is Private.</description>
    <inlineHelpText>Checked if the group is Private.</inlineHelpText>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>