unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this field, the group will be displayed in the Community Portal.</description>
    <inlineHelpText>By checking this field, the group will be displayed in the Community Portal.</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>