unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Is_Unlisted__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Unlisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if group is Unlisted.</description>
    <inlineHelpText>Checked if group is Unlisted.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>