unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Member_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Member_Entity_Type__c</fullName>
    <description>Defines the member type. Only the type selected can be a member of the group.</description>
    <inlineHelpText>Defines the member type. Only the type selected can be a member of the group.</inlineHelpText>
    <label>Member Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>