unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Member_Search_Display_Field_s_CSV__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Member_Search_Display_Field_s_CSV__c</fullName>
    <description>Defines the fields to be displayed on the group member tiles in the Group Members page using comma separated values of field API names. Limited to Group Member fields only.</description>
    <inlineHelpText>Defines the fields to be displayed on the group member tiles in the Group Members page using comma separated values of field API names. Limited to Group Member fields only.</inlineHelpText>
    <label>Member Search Display Fields (CSV)</label>
    <length>31768</length>
    <type>LongTextArea</type>
</CustomField>