unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Member_Search_Filter_Field_s_CSV__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Member_Search_Filter_Field_s_CSV__c</fullName>
    <description>Enter additional fields, comma separated, to narrow group member searches on the group listing page. Be sure to use the field&#39;s API name.</description>
    <inlineHelpText>Enter additional fields, comma separated, to narrow group member searches on the group listing page. Be sure to use the field&#39;s API name.</inlineHelpText>
    <label>Member Search Filter Fields (CSV)</label>
    <length>31768</length>
    <type>LongTextArea</type>
</CustomField>