unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Members__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Members__c</fullName>
    <description>Number of members in the group.</description>
    <inlineHelpText>Number of members in the group.</inlineHelpText>
    <label>Members</label>
    <summaryForeignKey>PagesApi__Community_Group_Member__c.PagesApi__Community_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>