unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Privacy_Setting__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Privacy_Setting__c</fullName>
    <description>Choose the privacy settings of the group:
1. Public - Open visibility; Open join process
2. Private - Restricted visibility; Approval based join process
3. Unlisted - Visible only to members, not searchable; Backend join process</description>
    <inlineHelpText>1. Public - Open visibility; Open join process
2. Private - Restricted visibility; Approval based join process
3. Unlisted - Visible only to members, not searchable; Backend join process</inlineHelpText>
    <label>Privacy Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
                <default>true</default>
                <label>Public</label>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Unlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>