unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Private_Community_Feed__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Private_Community_Feed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Chatter only for members of the community group.</description>
    <inlineHelpText>Enables Chatter only for members of the community group.</inlineHelpText>
    <label>Private Community Feed</label>
    <type>Checkbox</type>
</CustomField>