unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Private_Events__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Private_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Events only for members of the community group.</description>
    <inlineHelpText>Enables Events only for members of the community group.</inlineHelpText>
    <label>Private Events</label>
    <type>Checkbox</type>
</CustomField>