unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Private_Members__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Private_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables member features for members only in the community.</description>
    <inlineHelpText>Enables member features for members only in the community.</inlineHelpText>
    <label>Private Members</label>
    <type>Checkbox</type>
</CustomField>