unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Search_Results__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Search_Results__c</fullName>
    <defaultValue>10</defaultValue>
    <description>** Default 10 ** The value in this field defines the maximum number of results that will be returned for search results on the Group Members tab.</description>
    <inlineHelpText>** Default 10 ** The value in this field defines the maximum number of results that will be returned for search results on the Group Members tab.</inlineHelpText>
    <label>Search Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>