unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Search_Results_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Search_Results_Sort_Field__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <description>** Defaults Group Name ** Combined with the Search Results Sort Order, this field defines the field to sort group member search results in ascending or descending order. Limited to Community Group Member Fields Only.</description>
    <inlineHelpText>** Defaults Group Name ** Combined with the Search Results Sort Order, this field defines the field to sort group member search results in ascending or descending order. Limited to Community Group Member Fields Only.</inlineHelpText>
    <label>Search Results Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>