unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Search_Results_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Search_Results_Sort_Order__c</fullName>
    <defaultValue>&quot;ASC&quot;</defaultValue>
    <description>** Defaults Ascending ** Combined with the Search Results Sort Field, this field defines the order in which the search results will be displayed.</description>
    <inlineHelpText>** Defaults Ascending ** Combined with the Search Results Sort Field, this field defines the order in which the search results will be displayed.</inlineHelpText>
    <label>Search Results Sort Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>