unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Show_Group_Roster__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Show_Group_Roster__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays the link of the group roster in the community group dashboard.</description>
    <inlineHelpText>Displays the link of the group roster in the community group dashboard.</inlineHelpText>
    <label>Show Group Roster</label>
    <type>Checkbox</type>
</CustomField>