unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Show_Search_Filters__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Show_Search_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**  Default Unchecked ** This field enables or disables the filters in the Group Search page.</description>
    <inlineHelpText>**  Default Unchecked ** This field enables or disables the filters in the Group Search page.</inlineHelpText>
    <label>Show Search Filters</label>
    <type>Checkbox</type>
</CustomField>