unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Site__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the Site which owns the Community Group.</description>
    <inlineHelpText>** Required ** Link to the Site which owns the Community Group.</inlineHelpText>
    <label>Site</label>
    <referenceTo>PagesApi__Site__c</referenceTo>
    <relationshipLabel>Community Groups</relationshipLabel>
    <relationshipName>Community_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>