unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Twitter_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Twitter_Profile_URL__c</fullName>
    <description>URL where the user should be redirected when they click the Twitter icon in the group dashboard.</description>
    <inlineHelpText>URL where the user should be redirected when they click the Twitter icon in the group dashboard.</inlineHelpText>
    <label>Twitter Profile URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>