unpackaged/main/default/objects/PagesApi__Community_Group__c/fields/PagesApi__Type__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Type__c</fullName>
    <description>This field allows you to define a type of group to be available in the group search.  This field&#39;s values can be updated to better suite your organization&#39;s needs.</description>
    <inlineHelpText>This field allows you to define a type of group to be available in the group search.  This field&#39;s values can be updated to better suite your organization&#39;s needs.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chapter</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Member Group</fullName>
                <default>true</default>
                <label>Member Group</label>
            </value>
            <value>
                <fullName>Task-Force</fullName>
            </value>
            <value>
                <fullName>Working Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>