unpackaged/main/default/objects/PagesApi__Community_Group__c/listViews/PagesApi__All.listView-meta.xml
<ListView>
    <fullName>PagesApi__All</fullName>
    <columns>NAME</columns>
    <columns>PagesApi__Group_Owner__c</columns>
    <columns>PagesApi__Email__c</columns>
    <columns>PagesApi__Type__c</columns>
    <columns>PagesApi__Privacy_Setting__c</columns>
    <columns>PagesApi__Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>